Fix flex-wrap on mobile versions

--- a/style.css
+++ b/style.css
@@ -120,7 +120,7 @@ h2 {
 @media only screen and (max-width: 1024px) {
     .mediaItems {
         display: flex;
-        flex-wrap: nowrap;
+        flex-wrap: wrap;
         overflow-x: scroll;
     }
 
